# libmg

./: CMakeLists.txt  libmg.c  mg.h  poc_fhe.c  readme.md  redc  redc.c  redc.c~  test.c
